--- a/development/releases/cats/streetbees-cats.yaml
+++ b/development/releases/cats/streetbees-cats.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: - streetbees-cats
+  name: streetbees-cats
   namespace: default
   annotations:
     fluxcd.io/automated: "true"
