--- a/charts/streetbees_cats/templates/serviceaccount.yaml
+++ b/charts/streetbees_cats/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "street_bees_cats.serviceAccountName" . }}
+  name: {{ include "streetbees-cats.serviceAccountName" . }}
   labels:
-    {{- include "street_bees_cats.labels" . | nindent 4 }}
+    {{- include "streetbees-cats.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
