--- a/charts/streetbees_cats/values.yaml
+++ b/charts/streetbees_cats/values.yaml
@@ -1,4 +1,4 @@
-# Default values for street_bees_cats.
+# Default values for streetbees-cats.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
