--- a/charts/streetbees_cats/Chart.yaml
+++ b/charts/streetbees_cats/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: street_bees_cats
+name: streetbees-cats
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
