--- a/charts/streetbees_cats/templates/tests/test-connection.yaml
+++ b/charts/streetbees_cats/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "street_bees_cats.fullname" . }}-test-connection"
+  name: "{{ include "streetbees-cats.fullname" . }}-test-connection"
   labels:
-    {{- include "street_bees_cats.labels" . | nindent 4 }}
+    {{- include "streetbees-cats.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test-success
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "street_bees_cats.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "streetbees-cats.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
