--- a/development/releases/cats/streetbees-cats.yaml
+++ b/development/releases/cats/streetbees-cats.yaml
@@ -53,13 +53,13 @@ spec:
       port: 8000
 
     ingress:
-      enabled: false
-      annotations: {}
-        # kubernetes.io/ingress.class: nginx
-        # kubernetes.io/tls-acme: "true"
+      enabled: true
+      annotations:
+        kubernetes.io/ingress.class: nginx
+        kubernetes.io/tls-acme: "false"
       hosts:
-        - host: chart-example.local
-          paths: []
+        - host: streetbees.com
+          paths: ["/cats"]
       tls: []
       #  - secretName: chart-example-tls
       #    hosts:
