--- a/development/releases/cats/streetbees-cats.yaml
+++ b/development/releases/cats/streetbees-cats.yaml
@@ -59,7 +59,7 @@ spec:
         kubernetes.io/tls-acme: "false"
       hosts:
         - host: streetbees.com
-          paths: ["/cats"]
+          paths: ["/"]
       tls: []
       #  - secretName: chart-example-tls
       #    hosts:
