--- a/charts/streetbees_cats/templates/deployment.yaml
+++ b/charts/streetbees_cats/templates/deployment.yaml
@@ -33,6 +33,9 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+          - name: RACK_ENV
+            value: "{{ .Values.env.RACK_ENV }}"
           ports:
             - name: http
               containerPort: 8000
