--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Terraform Init
       run: terraform init
       env:
-        TF_ACTION_WORKING_DIR: '.'
+        TF_ACTION_WORKING_DIR: './terraform/development/eks_vpc'
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
@@ -38,7 +38,7 @@ jobs:
     - name: Terraform Format
       run: terraform fmt -check
       env:
-        TF_ACTION_WORKING_DIR: '.'
+        TF_ACTION_WORKING_DIR: './terraform/development/eks_vpc'
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
