--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Terraform Plan
       run: terraform plan
       env:
-        TF_ACTION_WORKING_DIR: '.'
+        TF_ACTION_WORKING_DIR: './terraform/development/eks_vpc'
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
