--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,25 +28,22 @@ jobs:
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
-      run: echo "${PWD}" && terraform init
+      run: cd terraform/development/eks_vpc && terraform init
       env:
-        TF_ACTION_WORKING_DIR: './terraform/development/eks_vpc'
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
-      run: terraform fmt -check
+      run: cd terraform/development/eks_vpc && terraform fmt -check
       env:
-        TF_ACTION_WORKING_DIR: './terraform/development/eks_vpc'
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan
+      run: cd terraform/development/eks_vpc && terraform plan
       env:
-        TF_ACTION_WORKING_DIR: './terraform/development/eks_vpc'
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
