--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -25,28 +25,27 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         terraform_version: 0.14.10  
-#         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
-      run: terraform version && cd terraform/development/eks_vpc && echo ${PWD} && sleep 10 && terraform init
+      run: cd terraform/development/eks_vpc && terraform init
       env:
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-#    # Checks that all Terraform configuration files adhere to a canonical format
-#    - name: Terraform Format
-#      run: cd terraform/development/eks_vpc && terraform fmt -check
-#      env:
-#        AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
-#        AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    # Checks that all Terraform configuration files adhere to a canonical format
+    - name: Terraform Format
+      run: cd terraform/development/eks_vpc && terraform fmt -check
+      env:
+        AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     # Generates an execution plan for Terraform
-#    - name: Terraform Plan
-#      run: cd terraform/development/eks_vpc && terraform plan
-#      env:
-#        AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
-#        AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: Terraform Plan
+      run: cd terraform/development/eks_vpc && terraform plan
+      env:
+        AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       # On push to development, build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
