--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -57,11 +57,11 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const output = `#### Terraform Format and Style 🖌 \`${{ steps.fmt.outcome }}\`
-          #### Terraform Initialization ⚙️ \`${{ steps.init.outcome }}\`
-          #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
+          const output = "#### Terraform Format and Style 🖌 ${{ steps.fmt.outcome }}"
+          #### Terraform Initialization ⚙️ "${{ steps.init.outcome }}"
+          #### Terraform Plan 📖 "${{ steps.plan.outcome }}"
           <details><summary>Show Plan</summary>
-          \`\`\`${process.env.PLAN}\`\`\`
+          ```${process.env.PLAN}```
           </details>
           *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
 
@@ -71,6 +71,28 @@ jobs:
             repo: context.repo.repo,
             body: output
           })
+    # - name: Update Pull Request
+    #   uses: actions/github-script@0.9.0
+    #   if: github.event_name == 'pull_request'
+    #   env:
+    #     PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+    #   with:
+    #     github-token: ${{ secrets.GITHUB_TOKEN }}
+    #     script: |
+    #       const output = `#### Terraform Format and Style 🖌 \`${{ steps.fmt.outcome }}\`
+    #       #### Terraform Initialization ⚙️ \`${{ steps.init.outcome }}\`
+    #       #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
+    #       <details><summary>Show Plan</summary>
+    #       \`\`\`${process.env.PLAN}\`\`\`
+    #       </details>
+    #       *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+
+    #       github.issues.createComment({
+    #         issue_number: context.issue.number,
+    #         owner: context.repo.owner,
+    #         repo: context.repo.repo,
+    #         body: output
+    #       })
     #     - name: Terraform Apply
 #       if: github.ref == 'refs/heads/development' && github.event_name == 'push'
 #       run: terraform apply -auto-approve
