--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -53,6 +53,7 @@ jobs:
     - name: terraform plan v2
       uses: dflook/terraform-plan@v1
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       with:
