--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,6 +9,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  PATH: ${{ terraform/development/eks_vpc }}
 
 jobs:
   terraform:
@@ -34,58 +35,13 @@ jobs:
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: cd terraform/development/eks_vpc && terraform init
-      # env:
-      #   AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #   AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
       run: cd terraform/development/eks_vpc && terraform fmt -check
-      # env:
-      #   AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #   AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-    # Generates an execution plan for Terraform
-    - name: Terraform Plan v1
-      id: plan
-      run: cd terraform/development/eks_vpc && terraform plan
-      # env:
-      #   AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #   AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-    # testing
+    # Terraform plan
     - name: terraform plan v2
       uses: dflook/terraform-plan@v1
-      # env:
-      #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #   AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       with:
-        path: terraform/development/eks_vpc
-
-
-    # - name: Update Pull Request
-    #   uses: actions/github-script@0.9.0
-    #   if: github.event_name == 'pull_request'
-    #   env:
-    #     PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
-    #   with:
-    #     github-token: ${{ secrets.GITHUB_TOKEN }}
-    #     script: |
-    #       const output = `#### Terraform Format and Style 🖌 \`${{ steps.fmt.outcome }}\`
-    #       #### Terraform Initialization ⚙️ \`${{ steps.init.outcome }}\`
-    #       #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
-    #       <details><summary>Show Plan</summary>
-    #       \`\`\`${process.env.PLAN}\`\`\`
-    #       </details>
-    #       *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
-
-    #       github.issues.createComment({
-    #         issue_number: context.issue.number,
-    #         owner: context.repo.owner,
-    #         repo: context.repo.repo,
-    #         body: output
-    #       })
-    #     - name: Terraform Apply
-#       if: github.ref == 'refs/heads/development' && github.event_name == 'push'
-#       run: terraform apply -auto-approve
+        path: {{ env.PATH }}
