--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -44,4 +44,4 @@ jobs:
     - name: terraform plan v2
       uses: dflook/terraform-plan@v1
       with:
-        path: {{ env.PATH }}
+        path: ${{ env.PATH }}
