--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,7 +9,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  PATH: ./terraform/development/eks_vpc
+  PATH_TARGET: ./terraform/development/eks_vpc
 
 jobs:
   terraform:
@@ -44,4 +44,4 @@ jobs:
     - name: Terraform plan
       uses: dflook/terraform-plan@v1
       with:
-        path: ${{ env.PATH }}
+        path: ${{ env.PATH_TARGET }}
