--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,4 +1,4 @@
-name: 'Terraform'
+name: 'Terraform CI/CD'
 
 on:
   push:
@@ -20,6 +20,7 @@ jobs:
     defaults:
       run:
         shell: bash
+        working-directory: ${{ env.PATH_TARGET }}
 
     steps:
     # Checkout the repository to the GitHub Actions runner
@@ -34,13 +35,13 @@ jobs:
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
-      run: cd terraform/development/eks_vpc && terraform init
+      run: terraform init
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
-      run: cd terraform/development/eks_vpc && terraform fmt -check
+      run: terraform fmt -check
 
-    # Terraform plan - deploying with dflook
+    # Terraform plan - switch executer deploy with dflook
     - name: Terraform plan
       uses: dflook/terraform-plan@v1
       with:
